--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,25 @@ p,.text{
 	align-items: center;
 }
 
+.subscribe-auto-container{
+	position:static;
+	padding:0px 15px;
+	margin:0 auto;
+	display: flex;
+	justify-content: space-between;
+	max-width: 1000px;
+}
+
+.footer-auto-container{
+	position:static;
+	padding:0px 15px;
+	margin:0 auto;
+	display: flex;
+	justify-content: space-between;
+	max-width: 500px;
+}
+
+
 .large-container{
 	position:static;
 	max-width:1550px;
@@ -5708,6 +5727,7 @@ img{
 	padding: 70px 20px 60px;
 	text-align: center;
 	max-width: 400px;
+	min-width: 300px;
 	margin: 0 auto;
 	box-shadow: 0 0 30px rgba(0,0,0,0.18);
 	-webkit-transition: all 500ms ease;
